tdf#128880 sw btlr: fix SwFrame::GetPaintArea() for the row span case

To be specific, this focuses on the case where a single cell has btlr
direction, but the containing row does not, and there is a row span.

The old code that took the logical right of the cell frame served two
purposes, it seems to me:

- in the rare case where the 1st row is wider then a subsequent row, we
  make sure that as the cell frame is expanded downwards, we're still
  inside the table polygon

- in the tb-rl ("Japanese") case, the logical right maps to physical
  bottom, and this way the cell frame is OK to render not only into its
  own row frame, but can expand also downwards.

Given that btlr maps left to bottom, this mechanism is broken there. Be
consistent with the working tbrl case, so just expand towards the
logical left in the btlr case.

The rest of the changes just make sure that SwAttrHandler::FontChg()
calls SwFont::SetVertical() with the correct bVertLayoutLRBT parameter,
which instantly fixes the actual position of the text.

Change-Id: I9032e7c6de72cec704843f3aae3c7848e139ebfa